--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
   
   <title>Frontend Mentor | News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+
   <header>
+      <img src="assets/images/logo.svg" alt="" class="logo">
       <nav>
         <ul>
           <li>Home</li>
@@ -27,45 +26,63 @@
       </nav>
   </header>
   
+  <section class="firtSection">
+      <div class="containerImg">
+        <img src="assets/images/image-web-3-desktop.jpg" alt="">
+      </div>
+
+      <div class="containerH1">
+        <h1>The Bright Future of Web 3.0?</h1>
+        <div class="containerParagButton">
+            <p>
+              We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              But is it really fulfilling its promise?
+            </p>
+            <button>Read more</button>
+
+        </div>
+        
+      </div>
+
+      <aside>
+        <h1>New </h1>
+        <h2>Hydrogen VS Electric Cars</h2>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <hr>
+        <h2> The Downsides of AI Artistry</h2>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+        <hr>
+        <h2>Is VC Funding Drying Up?</h2>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+        
+      </aside>
+
+  </section>
+
+  <section class="lasteSection">
+      <div class="card1">
+        <img src="assets/images/image-retro-pcs.jpg" alt="">
+        <h2>01</h2>
+        <h3>Reviving Retro PCs</h3>
+        <p>What happens when old PCs are given modern upgrades?</p>
+      </div>
+
+      <div class="card2">
+        <img src="assets/images/image-top-laptops.jpg" alt="">
+        <h2>01</h2>
+        <h3>Reviving Retro PCs</h3>
+        <p>Our best picks for various needs and budgets.</p>
+      </div>
+      <div class="card3">
+        <img src="assets/images/image-gaming-growth.jpg" alt="">
+        <h2>03</h2>
+        <h3>The Growth of Gaming</h3>
+        <p>How the pandemic has sparked fresh opportunities.</p>
+      </div>
+  </section>
   
   
-  
-  
-  
-
-  The Bright Future of Web 3.0?
-
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
-
-  Read more
-
-  New 
-
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
-
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
-
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
-
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
-
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
-
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+   
+ 
 </body>
 </html>
