--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | News homepage</title>
+  <script src="https://kit.fontawesome.com/d632d302b9.js" crossorigin="anonymous"></script>
+  <script src="script.js" defer></script>
 
   <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -23,6 +26,7 @@
           <li>Trending</li>
           <li>Categories</li>
         </ul>
+        <i class="fa-solid fa-bars"></i>
       </nav>
   </header>
   
